--- a/index.html
+++ b/index.html
@@ -1,89 +1,85 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>تسجيل العملاء للحصول على العروض</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body{margin:0;font-family:Arial;background:#f4f6f9;display:flex;align-items:center;justify-content:center;min-height:100vh}
-.card{background:#fff;width:100%;max-width:420px;padding:25px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.15)}
-h2{text-align:center;margin-bottom:10px}
-p{text-align:center;color:#666}
-input,button{width:100%;padding:12px;margin-top:10px;font-size:15px}
-input{border:1px solid #ccc;border-radius:8px}
-button{background:#1976d2;color:#fff;border:none;border-radius:8px;cursor:pointer}
-.msg{text-align:center;margin-top:10px}
-.ok{color:green}.err{color:red}
-</style>
+  <meta charset="UTF-8">
+  <title>تسجيل العملاء للحصول على العروض</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
+
+  <style>
+    body{font-family:Arial;background:#f2f2f2;padding:20px}
+    .card{background:#fff;padding:20px;border-radius:10px;max-width:400px;margin:auto}
+    input,button{width:100%;padding:10px;margin-top:10px}
+    button{background:#1976d2;color:#fff;border:none;border-radius:5px}
+  </style>
 </head>
 <body>
 
 <div class="card">
-  <h2>📢 اشترك في العروض</h2>
-  <p>سجّل بياناتك ليصلك كل جديد</p>
-
-  <input id="name" placeholder="الاسم الكامل">
+  <h2>التسجيل للحصول على العروض</h2>
+  <input id="name" placeholder="الاسم">
   <input id="phone" placeholder="رقم الموبايل">
-  <input id="city" placeholder="المدينة">
-
   <button onclick="register()">تسجيل</button>
-  <div id="msg" class="msg"></div>
+  <p id="msg"></p>
 </div>
 
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging-compat.js"></script>
-
 <script>
-firebase.initializeApp({
+const firebaseConfig = {
   apiKey: "AIzaSyBwMv6b3Pd6Xjn5Nu4Q4RFV_XFR_6BSsoM",
   authDomain: "na3ma-customers.firebaseapp.com",
   databaseURL: "https://na3ma-customers-default-rtdb.firebaseio.com",
   projectId: "na3ma-customers",
+  storageBucket: "na3ma-customers.firebasestorage.app",
   messagingSenderId: "118299493181",
   appId: "1:118299493181:web:ea8a0b2f1bfbc2bf0d7b54"
-});
+};
+
+firebase.initializeApp(firebaseConfig);
 
 const db = firebase.database();
 const messaging = firebase.messaging();
-const msg = document.getElementById("msg");
 
-function register(){
-  const name  = document.getElementById("name").value.trim();
-  const phone = document.getElementById("phone").value.trim();
-  const city  = document.getElementById("city").value.trim();
+async function register() {
+  const name = document.getElementById("name").value;
+  const phone = document.getElementById("phone").value;
+  const msg = document.getElementById("msg");
 
-  if(!name || !phone){
-    msg.textContent = "الاسم ورقم الموبايل مطلوبين";
-    msg.className = "msg err";
+  if (!name || !phone) {
+    msg.innerText = "من فضلك أدخل كل البيانات";
     return;
   }
 
-  Notification.requestPermission().then(p => {
-    if(p !== "granted"){
-      msg.textContent = "يجب السماح بالإشعارات";
-      msg.className = "msg err";
-      return;
-    }
+  try {
+    // تسجيل الـ Service Worker بالمسار الصحيح
+    const registration = await navigator.serviceWorker.register(
+      "/Costmars-offers-/firebase-messaging-sw.js"
+    );
 
-    messaging.getToken({
+    messaging.useServiceWorker(registration);
+
+    const token = await messaging.getToken({
       vapidKey: "BH3AKxpwkwgStqZjgxUMtHB65y1a7-FxtfIiyOpvkakwT02Dt4BS_b-CkeFAuXkh2XFXyIba-dcrif1ZUvVZ9jc"
-    }).then(token => {
-      return db.ref("customers/" + phone).set({
-        name, phone, city,
-        fcmToken: token,
-        createdAt: Date.now()
-      });
-    }).then(() => {
-      msg.textContent = "تم التسجيل بنجاح ✔";
-      msg.className = "msg ok";
-    }).catch(e => {
-      msg.textContent = e.message;
-      msg.className = "msg err";
     });
-  });
+
+    await db.ref("customers").push({
+      name,
+      phone,
+      token,
+      date: new Date().toISOString()
+    });
+
+    msg.innerText = "تم التسجيل بنجاح ✅";
+
+  } catch (e) {
+    console.error(e);
+    msg.innerText = "يجب السماح بالإشعارات أولاً";
+  }
 }
 </script>
 
 </body>
 </html>
+
