--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>العروض المتاحة</title>
+<title>العروض</title>
 
 <!-- OneSignal -->
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
@@ -11,8 +11,7 @@
 window.OneSignalDeferred = window.OneSignalDeferred || [];
 OneSignalDeferred.push(async function(OneSignal) {
   await OneSignal.init({
-    appId: "9fff8ba1-a3f9-45b6-b38c-d141ab4617eb",
-    notifyButton: { enable: false }
+    appId: "9fff8ba1-a3f9-45b6-b38c-d141ab4617eb"
   });
 });
 </script>
@@ -22,146 +21,108 @@ OneSignalDeferred.push(async function(OneSignal) {
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <style>
-body{
-  margin:0;
-  font-family: Arial, sans-serif;
-  background:#f4f6f9;
-}
-header{
-  background:#1976d2;
-  color:#fff;
-  padding:15px;
-  text-align:center;
-  font-size:20px;
-}
-.notify{
-  background:#ff9800;
-  color:#fff;
-  padding:12px;
-  border:none;
-  width:90%;
-  margin:15px auto;
-  display:block;
-  border-radius:10px;
-  font-size:16px;
-}
-.container{
-  padding:15px;
-}
+body{margin:0;font-family:Arial;background:#f4f6f9}
+header{background:#1976d2;color:#fff;padding:15px;text-align:center;font-size:20px}
+.container{padding:15px}
 .card{
   background:#fff;
   border-radius:15px;
-  box-shadow:0 4px 10px rgba(0,0,0,.1);
+  box-shadow:0 4px 12px rgba(0,0,0,.1);
   margin-bottom:20px;
   overflow:hidden;
-  animation:fadeIn .5s ease;
 }
-.card img{
-  width:100%;
-  height:auto;
-}
-.card-content{
-  padding:15px;
-}
-.title{
-  font-size:18px;
-  font-weight:bold;
-}
-.desc{
-  margin:10px 0;
-  color:#555;
-}
+.card img{width:100%;display:block}
+.content{padding:15px}
+.title{font-size:18px;font-weight:bold}
+.desc{margin:10px 0;color:#444}
 .timer{
   background:#eee;
   padding:10px;
   border-radius:10px;
   text-align:center;
-  margin:10px 0;
   font-weight:bold;
+  margin-bottom:10px
 }
 .whatsapp{
+  width:100%;
   background:#25D366;
   color:#fff;
-  padding:12px;
   border:none;
-  width:100%;
-  border-radius:10px;
+  padding:12px;
   font-size:16px;
-  cursor:pointer;
-}
-@keyframes fadeIn{
-  from{opacity:0;transform:translateY(20px)}
-  to{opacity:1;transform:translateY(0)}
+  border-radius:10px;
+  cursor:pointer
 }
 </style>
 </head>
 
 <body>
 
-<header>🔥 أحدث العروض 🔥</header>
-
-<button class="notify" onclick="enableNotify()">🔔 فعّل الإشعارات</button>
-
+<header>🔥 العروض الحالية 🔥</header>
 <div class="container" id="offers"></div>
 
 <script>
-function enableNotify(){
-  OneSignalDeferred.push(async function(OneSignal){
-    await OneSignal.Notifications.requestPermission();
-    alert("✅ تم تفعيل الإشعارات");
-  });
-}
-
-/* Firebase Config */
-const firebaseConfig = {
+firebase.initializeApp({
   databaseURL: "https://na3ma-customers-default-rtdb.firebaseio.com"
-};
-firebase.initializeApp(firebaseConfig);
+});
+
 const db = firebase.database();
+const box = document.getElementById("offers");
 
-const offersBox = document.getElementById("offers");
-
-db.ref("offers").on("value", snapshot=>{
-  offersBox.innerHTML = "";
-  snapshot.forEach(child=>{
+db.ref("offers").on("value", snap => {
+  box.innerHTML = "";
+  snap.forEach(child => {
     const o = child.val();
-    const end = new Date(o.to).getTime();
-    const id = "timer_"+child.key;
 
-    offersBox.innerHTML += `
+    const start = new Date(o.start).getTime();
+    const end   = new Date(o.end).getTime();
+    const phone = o.settings?.whatsapp || "";
+
+    const timerId = "t_" + child.key;
+
+    box.innerHTML += `
       <div class="card">
         <img src="${o.image}">
-        <div class="card-content">
+        <div class="content">
           <div class="title">${o.title}</div>
-          <div class="desc">${o.description}</div>
-          <div class="timer" id="${id}">جاري الحساب...</div>
-          <button class="whatsapp" onclick="order('${o.whatsapp}','${o.title}')">
-            🟢 طلب العرض عبر واتساب
+          <div class="desc">${o.desc}</div>
+          <div class="timer" id="${timerId}">جاري الحساب...</div>
+          <button class="whatsapp"
+            onclick="order('${phone}','${o.title}')">
+            طلب العرض عبر واتساب
           </button>
         </div>
       </div>
     `;
 
-    setInterval(()=>{
-      const now = new Date().getTime();
-      const diff = end - now;
-      if(diff <= 0){
-        document.getElementById(id).innerHTML = "❌ انتهى العرض";
+    setInterval(() => {
+      const now = Date.now();
+
+      if (now < start) {
+        document.getElementById(timerId).innerHTML = "⏳ العرض لم يبدأ بعد";
         return;
       }
-      const d = Math.floor(diff/(1000*60*60*24));
-      const h = Math.floor((diff%(1000*60*60*24))/(1000*60*60));
-      const m = Math.floor((diff%(1000*60*60))/(1000*60));
-      const s = Math.floor((diff%(1000*60))/1000);
-      document.getElementById(id).innerHTML =
+
+      const diff = end - now;
+      if (diff <= 0) {
+        document.getElementById(timerId).innerHTML = "❌ انتهى العرض";
+        return;
+      }
+
+      const d = Math.floor(diff / (1000*60*60*24));
+      const h = Math.floor((diff % (1000*60*60*24)) / (1000*60*60));
+      const m = Math.floor((diff % (1000*60*60)) / (1000*60));
+      const s = Math.floor((diff % (1000*60)) / 1000);
+
+      document.getElementById(timerId).innerHTML =
         `⏳ ${d}ي ${h}س ${m}د ${s}ث`;
-    },1000);
+    }, 1000);
   });
 });
 
 function order(phone,title){
-  const msg = encodeURIComponent("أرغب في طلب العرض: "+title);
-  window.open(`https://wa.me/${phone}?text=${msg}`,"_blank");
+  const msg = encodeURIComponent("أرغب في طلب العرض: " + title);
+  window.open(`https://wa.me/${phone}?text=${msg}`, "_blank");
 }
 </script>
 
